--- a/projects.html
+++ b/projects.html
@@ -47,30 +47,14 @@
                 <li>Responsive UI with Bootstrap</li>
                 <li>MongoDB for data persistence</li>
               </ul>
-              <a class="btn btn-sm btn-outline-primary" href="#">View repo</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://github.com/arRithin8248/To-Do-List-MERN-Stack">View repo</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- SCMS -->
-    <div class="col-md-6">
-      <div class="card h-100">
-        <div class="row g-0">
-          <div class="col-5">
-            <img src="assets/4.png" class="img-fluid h-100 object-cover" alt="SCMS automation">
-          </div>
-          <div class="col-7">
-            <div class="card-body">
-              <h5 class="card-title">SCMS Smart Automation (Hackathon)</h5>
-              <p class="card-text">Participated in hackathon for smart automation — worked on prototype features such as automated notifications, scheduling flows, and simple sensor integration mockups.</p>
-              <a class="btn btn-sm btn-outline-primary" href="#">Project write-up</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
 
     <!-- FILIM.in -->
     <div class="col-md-6">
@@ -83,7 +67,7 @@
             <div class="card-body">
               <h5 class="card-title">FILIM.in Contributions</h5>
               <p class="card-text">Worked on feature automation and small backend tasks to improve site workflows and performance.</p>
-              <a class="btn btn-sm btn-outline-primary" href="#">More details</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://praveenkumar0031.github.io/filim.in/home">View Project</a>
             </div>
           </div>
         </div>
@@ -122,7 +106,7 @@
                 <li>Uses OpenWeatherMap API</li>
                 <li>Responsive UI</li>
               </ul>
-              <a class="btn btn-sm btn-outline-primary" href="#">View repo</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://rithinar-weather-api.vercel.app/">View Project</a>
             </div>
           </div>
         </div>
@@ -145,7 +129,7 @@
                 <li>Interactive gameplay</li>
                 <li>Simple, responsive design</li>
               </ul>
-              <a class="btn btn-sm btn-outline-primary" href="#">View repo</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://tictactoe-ar.vercel.app/">View Project</a>
             </div>
           </div>
         </div>
@@ -168,7 +152,7 @@
                 <li>Accurate time tracking</li>
                 <li>Minimal and mobile-friendly</li>
               </ul>
-              <a class="btn btn-sm btn-outline-primary" href="#">View repo</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://ar-stopwatchapi.vercel.app/">View Project</a>
             </div>
           </div>
         </div>
