--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     </div>
 
     <div class="mt-3 mt-md-0">
-      <a class="text-white me-3" href="#" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
-      <a class="text-white me-3" href="#" target="_blank" title="GitHub"><i class="fab fa-github fa-lg"></i></a>
+      <a class="text-white me-3" href="https://www.linkedin.com/in/rithin-rajavel-4a1825293/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
+      <a class="text-white me-3" href="https://github.com/arRithin8248" target="_blank" title="GitHub"><i class="fab fa-github fa-lg"></i></a>
     </div>
   </div>
 </footer>
