--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                 <li>Responsive UI with Bootstrap</li>
                 <li>MongoDB for data persistence</li>
               </ul>
-              <a class="btn btn-sm btn-outline-primary" href="https://github.com/arRithin8248/To-Do-List-MERN-Stack">View repo</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://todo-frontend-5i0skzjsy-ardeveloper.vercel.app/">View Project</a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="card-body">
               <h5 class="card-title">FILIM.in Contributions</h5>
               <p class="card-text">Worked on feature automation and small backend tasks to improve site workflows and performance.</p>
-              <a class="btn btn-sm btn-outline-primary" href="https://praveenkumar0031.github.io/filim.in/home">View Project</a>
+              <a class="btn btn-sm btn-outline-primary" href="https://filim-in-ar.vercel.app/">View Project</a>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="row g-0">
           <div class="col-5">
             <img src="assets/7.png" class="img-fluid h-100 object-cover" alt="Tic Tac Toe Game">
-          </div>
+          </div>home
           <div class="col-7">
             <div class="card-body">
               <h5 class="card-title">Tic Tac Toe</h5>
